--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -73,7 +73,7 @@ swiftmailer:
 fos_user:
     db_driver: orm # other valid values are 'mongodb' and 'couchdb'
     firewall_name: main
-    user_class: AppBundle\Entity\Utilisateur
+    user_class: CRW\PlatformBundle\Entity\Utilisateur
     from_email:
         address: "%mailer_user%"
         sender_name: "%mailer_user%"
@@ -81,5 +81,5 @@ fos_user:
 
 fos_message:
     db_driver: orm
-    thread_class: AppBundle\Entity\Thread
-    message_class: AppBundle\Entity\Message
+    thread_class: CRW\PlatformBundle\Entity\Thread
+    message_class: CRW\PlatformBundle\Entity\Message
