--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -2,15 +2,16 @@ imports:
     - { resource: parameters.yml }
     - { resource: security.yml }
     - { resource: services.yml }
+    - { resource: "@CRWPlatformBundle/Resources/config/services.yml" }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    locale: fr
+    locale: fr_FR
 
 framework:
     #esi:             ~
-    translator:      ~
+    translator:      { fallbacks: ["%locale%"] }
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -85,3 +86,4 @@ fos_message:
     db_driver: orm
     thread_class: CRW\PlatformBundle\Entity\Thread
     message_class: CRW\PlatformBundle\Entity\Message
+
