--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -9,3 +9,7 @@ fos_user:
 fos_message:
     resource: "@FOSMessageBundle/Resources/config/routing.xml"
     prefix: /optional_routing_prefix
+
+app:
+  resource: "@CRWPlatformBundle/Controller/"
+  type: annotation
