--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -64,8 +64,8 @@ doctrine:
 
 # Swiftmailer Configuration
 swiftmailer:
-    transport:    "%mailer_transport%"
-    host:         "%mailer_host%"
+    transport:    gmail
+    host:         smtp.gmail.com
     username:     "%mailer_user%"
     password:     "%mailer_password%"
     spool:     { type: memory }
