--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
         "twig/twig": "^1.0||^2.0",
         "friendsofsymfony/message-bundle": "^1.3",
         "friendsofsymfony/user-bundle": "~2.0",
-        "knplabs/knp-paginator-bundle": "^2.6"
+        "knplabs/knp-paginator-bundle": "^2.6",
+        "vich/uploader-bundle": "^1.4"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
